test/gpu/native/assertOnFailToGpuizeAttr.2.good
assertOnFailToGpuizeAttr.chpl:29: error: Loop is marked with @assertOnGpu but is not eligible for execution on a GPU
assertOnFailToGpuizeAttr.chpl:20: note: function is marked as not eligible for GPU execution
assertOnFailToGpuizeAttr.chpl:30: note:   reached via call to 'funcMarkedNotGpuizable' in loop body here
